fixed display on mobile, changed projects display on mobile

--- a/styles/section_four.css
+++ b/styles/section_four.css
@@ -15,6 +15,11 @@
   font-family: "Fjalla One", sans-serif;
 }
 
+#prev_projects,
+#next_projects {
+  display: none;
+}
+
 .projects-cards {
   display: flex;
   margin-left: 50em;
@@ -148,18 +153,59 @@
 @media (max-width: 750px) {
   .section-four {
     margin: 02em 0em;
+    position: relative;
   }
 
   .section-four p {
     font-size: 1.8rem;
   }
 
-  .projects-cards img {
-    width: 13em;
-    height: 12em;
+  .projects-cards {
+    width: 100%;
   }
 
-  #selected-project-img {
-    object-fit: cover;
+  #prev_projects,
+  #next_projects {
+    display: block;
+    position: absolute;
+    color: white;
+    top: 7.5em;
+    z-index: 10;
+    font-size: 2rem;
+  }
+
+  #prev_projects {
+    left: 0em;
+  }
+
+  #next_projects {
+    right: 0em;
+  }
+
+  #prev_projects:hover,
+  #next_projects:hover {
+    cursor: pointer;
+  }
+
+  .projects-cards {
+    margin-left: 0;
+    position: relative;
+  }
+
+  .projects-cards img {
+    width: 100%;
+    height: 20em;
+    border: none;
+    transform: translateY(0) !important;
+    margin-right: 1em;
+    object-fit: fill;
+  }
+
+  .projects-cards img:hover {
+    margin-top: 0em;
+  }
+
+  .info-box {
+    margin-top: 0em;
   }
 }
